[gd_scene load_steps=11 format=3 uid="uid://cb5p62jsx3cek"]

[ext_resource type="Script" path="res://scripts/Zombie.gd" id="1_2f2yj"]
[ext_resource type="PackedScene" uid="uid://c3y4l46ltiylq" path="res://scenes/zombie_visuals.tscn" id="2_6sp37"]
[ext_resource type="Texture2D" uid="uid://ci8kphgo20wp1" path="res://assets/external/kenney_particle-pack/PNG (Transparent)/smoke_07.png" id="3_r0fmh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s55pl"]
radius = 0.197272
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7eisp"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_r0fmh")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_llcek"]
material = SubResource("StandardMaterial3D_7eisp")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="Curve" id="Curve_pfv1c"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_waltu"]
offsets = PackedFloat32Array(0, 0.493333)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="SphereShape3D" id="SphereShape3D_tdqlm"]

[sub_resource type="SphereShape3D" id="SphereShape3D_qtmkk"]
radius = 3.0

[node name="Zombie" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
script = ExtResource("1_2f2yj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_s55pl")

[node name="ZombieVisuals" parent="." instance=ExtResource("2_6sp37")]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.5

[node name="Dust" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.487089, 0.192294)
emitting = false
amount = 4
lifetime = 0.8
one_shot = true
explosiveness = 0.8
mesh = SubResource("PlaneMesh_llcek")
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 2.0
initial_velocity_max = 4.0
angle_max = 720.0
scale_amount_min = 0.1
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_pfv1c")
color_ramp = SubResource("Gradient_waltu")

[node name="DisabledTimer" type="Timer" parent="."]
one_shot = true

[node name="InteractArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
shape = SubResource("SphereShape3D_tdqlm")

[node name="AttentionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttentionArea"]
shape = SubResource("SphereShape3D_qtmkk")
